Changes: - removed ForecastHeader arrow icons on mobile - fixed ForecastHeader on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1834,21 +1834,47 @@ button {
     .Location .title,
     .Astronomy .title {
         font-size: 1.6rem;
-
-    }
-
-    .ForecastHeader {
-        /*background-color: lightgoldenrodyellow;*/
-    }
-
-    .ForecastHourlyInfo .sub_title {
-        font-size: 0.9rem;
-        width: 95%;
     }
 
     .awssld__controls__arrow-left,
     .awssld__controls__arrow-right {
         bottom: 90px;
+    }
+
+    .ForecastHeader img.right {
+        display: inline-block;
+        visibility: hidden;
+        width: 0;
+    }
+    .ForecastHeader img.left_down {
+        display: inline-block;
+        visibility: hidden;
+        width: 0;
+    }
+
+    .ForecastHeader .sub_title_main {
+        display: flex;
+        flex-direction: column;
+        margin-top: 20px;
+    }
+
+    .ForecastHeader .date {
+        bottom: 20px;
+    }
+
+    .ForecastDailyInfo_wrapper h2,
+    .ForecastHourlyInfo_wrapper h2 {
+        font-size: 1.2rem;
+    }
+
+    .ForecastDailyInfo_wrapper h2.daily_summary,
+    .ForecastHourlyInfo_wrapper h2 {
+        margin: 30px 0 50px;
+    }
+
+    .ForecastHourlyInfo .sub_title {
+        font-size: 0.9rem;
+        width: 95%;
     }
 
 }
@@ -1880,13 +1906,13 @@ button {
         height: 1400px;
     }
 
-    .dot_slide_wrapper {
-        margin-top: 50px;
-    }
-
     .ForecastHourlyInfo .sub_title {
         font-size: 0.9rem;
         width: 95%;
+    }
+
+    .dot_slide_wrapper {
+        margin-top: 50px;
     }
 
     .AirQuality .main {
@@ -1918,6 +1944,11 @@ button {
     .awssld {
         height: 1650px;
         background-size: 100% 100%;
+    }
+
+    .awssld__controls__arrow-left,
+    .awssld__controls__arrow-right {
+        bottom: 75px;
     }
 
     .dot_slide_wrapper {
